package game.entities.items;

// 500 points
public class Apple extends Item  {
    public Apple(int xPos, int yPos) {
        super(xPos, yPos, "Apple.png", 500);
    }
}
