package game.entities.items;

// 200 points
public class Cherry extends Item {
    public Cherry(int xPos, int yPos) {
        super(xPos, yPos, "cherry.png", 200);
    }
}
