package game.entities.items;

// 1000 point
public class watermelon extends Item {
    public watermelon(int xPos, int yPos) {
        super(xPos, yPos, "watermelon.png", 1000);
    }
}
